# anicap

./: .gitignore  Cargo.toml  README.md  anicap_sample.yml
database/: schema.sql
src/: configuration.rs  controller.rs  main.rs  models.rs
src/config/: server_config.rs
src/configuration/: route_config.rs  server_config.rs
src/controller/: app_user_controller.rs  controller_types.rs  user_serie_controller.rs
src/models/: app_user.rs  schema.rs  token.rs  user_serie.rs
src/security/: authentication.rs
src/utils/: database_utils.rs  error_mapper.rs
