[package]
name = "anicap"
version = "0.1.0"
authors = ["Daniel Córdova A. <danesc87@gmail.com>"]
edition = "2018"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
jsonwebtoken = "7.2.0"
futures = "0.3.17"
config = "0.11.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_json = "1.0.68"
data-encoding = "2.3.2"
failure = "0.1.8"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono"] }
